--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,13 @@
   },
   "type": "module",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.13.0 || ^6.0.0",
+    "@typescript-eslint/parser": "^5.0.0 || ^6.0.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3"
   }
 }
