--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "prepare": "husky install",
-    "common": "pnpm --filter common"
+    "common": "pnpm --filter common",
+    "app": "pnpm --filter web-app"
   },
   "keywords": [],
   "author": "",
